# gem-scam-finder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: known_scams_seed.yaml  rubric.md  targets.yaml
scripts/: seed_targets.py
src/gemscan/: cli.py  settings.py
src/gemscan/api/: admin.py  main.py  public.py
src/gemscan/classify/: classifier.py  heuristics.py  prompts.py
src/gemscan/db/: models.py  seed.py  session.py
src/gemscan/discovery/: ct_logs.py  dnstwist_gen.py  newdomains.py  pipeline.py  serp.py
src/gemscan/enrich/: dns_lookup.py  http_probe.py  pipeline.py  scrape.py  screenshot.py  whois_lookup.py
src/gemscan/report/: generator.py
src/gemscan/report/templates/: google_ads.j2  host.j2  registrar.j2
src/gemscan/review/: queue.py
tests/: test_smoke.py
